2003-01-14	fabian
    * Enhanced save session
    * Fixed insert mode bug
    * Fixed wrap around mode
    * Failed attempt to set up mouse cursor
    
2003-01-14	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bug where adding a second tab would cause 
      the scroll position of the first tab to be reset.
      
    * Added option to silence terminal bell.
      

2002-01-13	fabian
    * Version number is now 0.6.2
    * New command in Tools menu: Save Config
    * Add Hide-Tab as an option
    * Updated Chinese nib files(Japanese nib files need
      to be updated)
    * bold is now enabled when font with appropriate bold
      size is used.
    * bug fixes in VT100Screen
    
      
2003-01-13	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added an option to copy selected text to emulate 
      X copy/paste. This requires a multi-button mouse 
      with one of the buttons programmed to be "Cmd-V" or 
      "paste".
      

2003-01-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added some keyboard shortcuts to addressbook.
    

2003-01-11	Aaron D. Gerber <gerber@trvnet.net>

    * When you edit or add an entry to the address book,
      it will be sorted.
      
2003-01-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bugs in syncing transparency value and control 
      in the Preference panel.


2003-01-10	fabian
    * Better resize behavior
    * Tab title changes when an icon title change
      request is received
    
2003-01-09	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed some scrolling/sizing issues by overriding 
      adjustScroll: in PTYTextView. Reactivated the 
      windowWillResize: toSize: code.
      

2003-01-09 	fabian
    * help docs updated. Removed unnecessary links and pics
    * Fixed a bug in scrollDown
    * Fixed a bug in putToken(), NEL
    
2003-01-08	fabian
    * Added new option in address book entries that allow
      user to set "close session automatically" individually
      